kubernetes/apps/default/syncthing/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APP}
  annotations:
    gethomepage.dev/description: "Syncthing is a continuous file synchronization tool."
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: syncthing.svg
    gethomepage.dev/group: Apps
    gethomepage.dev/name: Syncthing
spec:
  hostnames:
    - "${APP}.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: ${APP}
          namespace: default
          port: ${APP_PORT}
